test/Driver/checkedc-notsupported.cl
// Checked C extension is not supported for OpenCL.   Make sure driver
// rejects the flag.
//
// RUN: not %clang -fcheckedc-extension %s 2>&1 | FileCheck %s
// CHECK: error: invalid argument '-fcheckedc-extension' not allowed with 'OpenCL'

extern void f() {}


